table works